5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1649_869.log
== TEST (2019-04-04 20:41:30) 
-- CODE:
x=float(input("Digite o valor das compras: "))
if(x>=200):
   x=x*0.95
	print(x)
else:
	print(x)	
	
-- ERROR:
File "XXXX", line 4
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:41:45) 
-- CODE:
x=float(input("Digite o valor das compras: "))
if(x>=200):
   x=x*0.95
print(x)

	
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:42:09) 
-- CODE:
x=float(input("Digite o valor das compras: "))
if(x>=200):
   x=x*0.95
print(x)

	
-- EXECUTION TIME:
0.123195
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:42:26) 
-- CODE:
x=float(input("Digite o valor das compras: "))
if(x>=200):
   x=x*0.95
print(round(x,2))

	
-- EXECUTION TIME:
0.19345
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:16:13) 
-- CODE:
x=float(input("Digite o valor das compras: "))
if(x>=200):
   x=x*0.95
print(round(x,2))

	
-- EXECUTION TIME:
0.114447
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
